--- a/slides/main.tex
+++ b/slides/main.tex
@@ -52,6 +52,12 @@
         Exit $\rightarrow$
         DoH Resolver
 
+        \vspace{1em}
+        \textbf{Idea:}
+        Client $\rightarrow$
+        Nearby Entry $\rightarrow$
+        Nearby Exit $\rightarrow$
+        DoH Resolver
     \end{frame}
 
 \end{document}
