--- a/slides/main.tex
+++ b/slides/main.tex
@@ -45,7 +45,7 @@
     \end{frame}
 
     \begin{frame}{Protocols}
-        \textbf{Default:}
+        \textbf{Default DoHoT:}
         Client $\rightarrow$
         Entry $\rightarrow$
         Middle $\rightarrow$
@@ -86,7 +86,7 @@
     \end{frame}
 
     \begin{frame}{Measurement}
-        A single query via a fresh protocol X times:
+        A single unique query via each protocol X times:
         \texttt{DNSHACKATHON-\{random\}.se}\\
         \vspace{2em}
         TODO: Graph
